@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Broker {
        + executeCommand()
        + setCommand()
    }
  }
  

  namespace  {
    class BuyCommand {
        + BuyCommand()
        + execute()
    }
  }
  

  namespace  {
    interface Command {
        {abstract} + execute()
    }
  }
  

  namespace  {
    class Main {
        {static} + main()
    }
  }
  

  namespace  {
    class SellCommand {
        + SellCommand()
        + execute()
    }
  }
  

  namespace  {
    class Stock {
        + buy()
        + sell()
    }
  }
  

  Broker o-- Command : command
  BuyCommand .up.|> Command
  BuyCommand o-- Stock : stock
  SellCommand .up.|> Command
  SellCommand o-- Stock : stock


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
